@@ -1338,6 +1338,118 @@ literal|"//*[@numFound='1']"
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+DECL|method|testCommitWithin
+specifier|public
+name|void
+name|testCommitWithin
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ExtractingRequestHandler
+name|handler
+init|=
+operator|(
+name|ExtractingRequestHandler
+operator|)
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getRequestHandler
+argument_list|(
+literal|"/update/extract"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"handler is null and it shouldn't be"
+argument_list|,
+name|handler
+operator|!=
+literal|null
+argument_list|)
+expr_stmt|;
+comment|// Load plain text specifying filename
+name|loadLocal
+argument_list|(
+literal|"extraction/version_control.txt"
+argument_list|,
+literal|"fmap.created"
+argument_list|,
+literal|"extractedDate"
+argument_list|,
+literal|"fmap.producer"
+argument_list|,
+literal|"extractedProducer"
+argument_list|,
+literal|"fmap.creator"
+argument_list|,
+literal|"extractedCreator"
+argument_list|,
+literal|"fmap.Keywords"
+argument_list|,
+literal|"extractedKeywords"
+argument_list|,
+literal|"fmap.Author"
+argument_list|,
+literal|"extractedAuthor"
+argument_list|,
+literal|"literal.id"
+argument_list|,
+literal|"one"
+argument_list|,
+literal|"fmap.language"
+argument_list|,
+literal|"extractedLanguage"
+argument_list|,
+literal|"fmap.content"
+argument_list|,
+literal|"extractedContent"
+argument_list|,
+name|ExtractingParams
+operator|.
+name|RESOURCE_NAME
+argument_list|,
+literal|"extraction/version_control.txt"
+argument_list|,
+literal|"commitWithin"
+argument_list|,
+literal|"200"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"id:one"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='0']"
+argument_list|)
+expr_stmt|;
+comment|// TODO: Find better way of testing commitWithin without sleeping?
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"id:one"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='1']"
+argument_list|)
+expr_stmt|;
+block|}
 comment|// Note: If you load a plain text file specifying neither MIME type nor filename, extraction will silently fail. This is because Tika's
 comment|// automatic MIME type detection will fail, and it will default to using an empty-string-returning default parser
 annotation|@
