@@ -120,21 +120,6 @@ name|ContentStream
 import|;
 end_import
 begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|handler
-operator|.
-name|XmlUpdateRequestHandler
-operator|.
-name|COMMIT_WITHIN
-import|;
-end_import
-begin_import
 import|import
 name|org
 operator|.
@@ -545,6 +530,8 @@ name|params
 operator|.
 name|getInt
 argument_list|(
+name|UpdateParams
+operator|.
 name|COMMIT_WITHIN
 argument_list|,
 operator|-
