@@ -91,6 +91,21 @@ name|solr
 operator|.
 name|common
 operator|.
+name|params
+operator|.
+name|UpdateParams
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|util
 operator|.
 name|StrUtils
@@ -1107,6 +1122,22 @@ argument_list|(
 name|OVERWRITE
 argument_list|,
 literal|true
+argument_list|)
+expr_stmt|;
+name|templateAdd
+operator|.
+name|commitWithin
+operator|=
+name|params
+operator|.
+name|getInt
+argument_list|(
+name|UpdateParams
+operator|.
+name|COMMIT_WITHIN
+argument_list|,
+operator|-
+literal|1
 argument_list|)
 expr_stmt|;
 name|strategy
