@@ -520,6 +520,60 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testCommitWithin
+specifier|public
+name|void
+name|testCommitWithin
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|makeFile
+argument_list|(
+literal|"id\n100\n101\n102"
+argument_list|)
+expr_stmt|;
+name|loadLocal
+argument_list|(
+literal|"stream.file"
+argument_list|,
+name|filename
+argument_list|,
+literal|"commitWithin"
+argument_list|,
+literal|"200"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"id:[100 TO 110]"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='0']"
+argument_list|)
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"id:[100 TO 110]"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='3']"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testCommitTrue
 specifier|public
 name|void
